--- a/Ticket.Presentation/appsettings.json
+++ b/Ticket.Presentation/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Default": "Server=.\\sqlexpress;Database=TicketDb;User ID=sa;Password=1;Trusted_Connection=True;TrustServerCertificate=True"
+  }
 }
