Add employee directory precheck support

--- a/Ticket.Presentation/appsettings.json
+++ b/Ticket.Presentation/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default": "Server=.\\sqlexpress;Database=TicketDb;User ID=sa;Password=1;Trusted_Connection=True;TrustServerCertificate=True"
+    "Default": "Server=.\\sqlexpress;Database=TicketDb;User ID=sa;Password=1;Trusted_Connection=True;TrustServerCertificate=True",
+    "EmployeeDirectory": "Server=.\\sqlexpress;Database=EmployeeDirectoryDb;User ID=sa;Password=1;Trusted_Connection=True;TrustServerCertificate=True"
   }
 }
