--- a/Ticket.Presentation/appsettings.json
+++ b/Ticket.Presentation/appsettings.json
@@ -8,6 +8,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "Default": "Server=.\\sqlexpress;Database=TicketDb;User ID=sa;Password=1;Trusted_Connection=True;TrustServerCertificate=True",
-    "EmployeeDirectory": "Server=.\\sqlexpress;Database=EmployeeDirectoryDb;User ID=sa;Password=1;Trusted_Connection=True;TrustServerCertificate=True"
+    "EmployeeDirectory": "Server=.\\sqlexpress;Database=EmployeeDb;User ID=sa;Password=1;Trusted_Connection=True;TrustServerCertificate=True"
   }
 }
