Add email verification codes and sender

--- a/Ticket.Presentation/appsettings.Development.json
+++ b/Ticket.Presentation/appsettings.Development.json
@@ -4,5 +4,15 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "Email": {
+    "Host": "smtp.example.com",
+    "Port": 587,
+    "UserName": "smtp-user",
+    "Password": "smtp-password",
+    "FromAddress": "no-reply@example.com",
+    "FromName": "Ticket Support",
+    "EnableSsl": true,
+    "VerificationBaseUrl": "https://example.com/verify-email"
   }
 }
