--- a/Ticket.Presentation/appsettings.json
+++ b/Ticket.Presentation/appsettings.json
@@ -9,5 +9,15 @@
   "ConnectionStrings": {
     "Default": "Server=.\\sqlexpress;Database=TicketDb;User ID=sa;Password=1;Trusted_Connection=True;TrustServerCertificate=True",
     "EmployeeDirectory": "Server=.\\sqlexpress;Database=EmployeeDb;User ID=sa;Password=1;Trusted_Connection=True;TrustServerCertificate=True"
+  },
+  "Email": {
+    "Host": "smtp.example.com",
+    "Port": 587,
+    "UserName": "smtp-user",
+    "Password": "smtp-password",
+    "FromAddress": "no-reply@example.com",
+    "FromName": "Ticket Support",
+    "EnableSsl": true,
+    "VerificationBaseUrl": "https://example.com/verify-email"
   }
 }
