--- a/Ticket.Presentation/appsettings.json
+++ b/Ticket.Presentation/appsettings.json
@@ -11,13 +11,13 @@
     "EmployeeDirectory": "Server=.\\sqlexpress;Database=EmployeeDb;User ID=sa;Password=1;Trusted_Connection=True;TrustServerCertificate=True"
   },
   "Email": {
-    "Host": "smtp.example.com",
+    "Host": "smtp.gmail.com",
     "Port": 587,
-    "UserName": "smtp-user",
-    "Password": "smtp-password",
-    "FromAddress": "no-reply@example.com",
+    "SenderEmail": "fixit.team.ask@gmail.com",
+    "SenderPassword": "equj oxfb ckcq yopb",
     "FromName": "Ticket Support",
-    "EnableSsl": true,
-    "VerificationBaseUrl": "https://example.com/verify-email"
+    "AdminEmail": "fixit.team.ask@gmail.com"
+
+    // "VerificationBaseUrl": "https://example.com/verify-email"
   }
 }
