--- a/Ticket.Presentation/appsettings.json
+++ b/Ticket.Presentation/appsettings.json
@@ -13,11 +13,11 @@
   "Email": {
     "Host": "smtp.gmail.com",
     "Port": 587,
-    "UserName": "fixit.team.ask@gmail.com",
-    "Password": "equj oxfb ckcq yopb",
-    "FromAddress": "fixit.team.ask@gmail.com",
-    "FromName": "Ticket Support",
-    "EnableSsl": true,
-    "VerificationBaseUrl": ""
+    "SenderEmail": "fixit.team.ask@gmail.com",
+    "Password": "rnxtizsjjqxuntdf",
+    "AdminEmail": "fixit.team.ask@gmail.com",
+    "VerificationBaseUrl": "https://example.com/verify-email"
+
+
   }
 }
