fix the isuue of sending code for the verification the email

--- a/Ticket.Presentation/appsettings.Development.json
+++ b/Ticket.Presentation/appsettings.Development.json
@@ -6,12 +6,12 @@
     }
   },
   "Email": {
-    "Host": "smtp.example.com",
+    "Host": "smtp.gmail.com",
     "Port": 587,
-    "UserName": "smtp-user",
-    "Password": "smtp-password",
-    "FromAddress": "no-reply@example.com",
-    "FromName": "Ticket Support",
+    "UserName": "fixit.team.ask@gmail.com",
+    "SenderPassword": "rnxt izsj jqxu ntdf",
+    "FromAddress": "fixit.team.ask@gmail.com",
+    "FromName": "Ticket",
     "EnableSsl": true,
     "VerificationBaseUrl": "https://example.com/verify-email"
   }
