--- a/Ticket.Presentation/appsettings.json
+++ b/Ticket.Presentation/appsettings.json
@@ -11,10 +11,10 @@
     "EmployeeDirectory": "Server=.\\sqlexpress;Database=EmployeeDb;User ID=sa;Password=1;Trusted_Connection=True;TrustServerCertificate=True"
   },
   "Email": {
-    "Host": "smtp.gmail.com",
+    "Host": " 209.85.202.109",
     "Port": 587,
     "SenderEmail": "fixit.team.ask@gmail.com",
-    "Password": "rnxtizsjjqxuntdf",
+    "SenderPassword": "rnxt izsj jqxu ntdf",
     "AdminEmail": "fixit.team.ask@gmail.com",
     "VerificationBaseUrl": "https://example.com/verify-email"
 
