Use TicketDbContext for employee lookup

--- a/Ticket.Presentation/appsettings.Development.json
+++ b/Ticket.Presentation/appsettings.Development.json
@@ -8,11 +8,9 @@
   "Email": {
     "Host": "smtp.gmail.com",
     "Port": 587,
-    "UserName": "fixit.team.ask@gmail.com",
+    "SenderEmail": "fixit.team.ask@gmail.com",
     "SenderPassword": "rnxt izsj jqxu ntdf",
-    "FromAddress": "fixit.team.ask@gmail.com",
-    "FromName": "Ticket",
-    "EnableSsl": true,
+    "AdminEmail": "fixit.team.ask@gmail.com",
     "VerificationBaseUrl": "https://example.com/verify-email"
   }
 }
