--- a/Ticket.Presentation/appsettings.json
+++ b/Ticket.Presentation/appsettings.json
@@ -7,16 +7,14 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default": "Server=.\\sqlexpress;Database=TicketDb;User ID=sa;Password=1;Trusted_Connection=True;TrustServerCertificate=True",
-    
+    "Default": "Server=.\\sqlexpress;Database=TicketDb;User ID=sa;Password=1;Trusted_Connection=True;TrustServerCertificate=True"
+  },
   "Email": {
-    "Host": " 209.85.202.109",
+    "Host": "209.85.202.109",
     "Port": 587,
     "SenderEmail": "fixit.team.ask@gmail.com",
     "SenderPassword": "rnxt izsj jqxu ntdf",
     "AdminEmail": "fixit.team.ask@gmail.com",
     "VerificationBaseUrl": "https://example.com/verify-email"
-
-
   }
 }
