--- a/Ticket.Infrastructure/Ticket.Infrastructure.csproj
+++ b/Ticket.Infrastructure/Ticket.Infrastructure.csproj
@@ -26,4 +26,8 @@
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="9.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
