Add password-based registration and login flow

--- a/Ticket.Presentation/appsettings.Development.json
+++ b/Ticket.Presentation/appsettings.Development.json
@@ -12,5 +12,11 @@
     "SenderPassword": "rnxt izsj jqxu ntdf",
     "AdminEmail": "fixit.team.ask@gmail.com",
     "VerificationBaseUrl": "https://example.com/verify-email"
+  },
+  "Jwt": {
+    "Issuer": "TicketPortal",
+    "Audience": "TicketPortal",
+    "SigningKey": "REPLACE_WITH_SECURE_SIGNING_KEY",
+    "AccessTokenMinutes": 60
   }
 }
